# desktop_file_parser

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: internal_structs.rs  lib.rs  parser.rs  structs.rs
