[package]
name = "freedesktop-file-parser"
version = "0.1.3"
edition = "2021"
authors = ["David Huang jiguangllsw@gmail.com"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/BL-CZY/desktop_file_parser"
documentation = "https://github.com/BL-CZY/desktop_file_parser?tab=readme-ov-file#freedesktop-desktop-entry-parser"
description = "Freedesktop Desktop Entry Parser"

[dependencies]
thiserror = "2.0.7"
freedesktop-icons = "0.4.0"
