[package]
name = "freedesktop-file-parser"
version = "0.3.1"
edition = "2021"
authors = ["David Huang jiguangllsw@gmail.com"]
license = "MIT"
repository = "https://github.com/BL-CZY/desktop_file_parser"
description = "Freedesktop Desktop Entry Parser"

[dependencies]
thiserror = "2.0.7"
freedesktop-icons = { version = "0.4.0", optional = true }

[features]
resolve-icons = ["dep:freedesktop-icons"]
